@@ -787,14 +787,17 @@ PushMethodCallFrame(
     fdPtr->cmd.clientData = &fdPtr->efi;
     pmPtr->procPtr->cmdPtr = &fdPtr->cmd;
 
-    if (pmPtr->procPtr->bodyPtr->typePtr != &tclByteCodeType) {
+    /* 
+     * [Bug 2037727] Always call TclProcCompileProc so that we check not
+     * only that we have bytecode, but also that it remains valid.
+     */
+
 	result = TclProcCompileProc(interp, pmPtr->procPtr,
 		pmPtr->procPtr->bodyPtr, (Namespace *) nsPtr,
 		"body of method", namePtr);
 	if (result != TCL_OK) {
 	    return result;
 	}
-    }
 
     /*
      * Make the stack frame and fill it out with information about this call.
